tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_matrix/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_matrix/input.essence:3:15:
  |
3 | such that x = y
  |               ^
Type error: y
	Expected: int
	Got: matrix